--- a/temp-next/package.json
+++ b/temp-next/package.json
@@ -1,23 +1,13 @@
 {
-  "name": "physics-education-website",
-  "version": "1.0.0",
+  "name": "temp-next",
+  "version": "0.1.0",
   "private": true,
-  "description": "人教版九年级物理课程实验模拟教学网站",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "eslint"
   },
-  "keywords": [
-    "physics",
-    "education",
-    "simulation",
-    "chinese",
-    "high-school"
-  ],
-  "author": "物理实验模拟教学平台",
-  "license": "MIT",
   "dependencies": {
     "next": "16.0.10",
     "react": "19.2.1",
